[package]
name = "pallet-doas"
version = "2.0.4"
authors = [
	"Digital Catapult <https://www.digicatapult.org.uk>",
	"Parity Technologies <admin@parity.io>",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/digicatapult/dscp-node/"
description = "FRAME pallet for doas"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
