[package]
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
description = 'A FRAME pallet for storing and evaluating process validation restrictions'
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
name = 'pallet-process-validation'
version = "3.4.4"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true }
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

dscp-pallet-traits = { default-features = false, path = '../traits' }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'serde',
    'sp-std/std',
    'dscp-pallet-traits/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ["frame-support/try-runtime"]
