[package]
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
description = 'A FRAME pallet for storing and evaluating process validation restrictions'
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/sqnc-node/'
name = 'pallet-process-validation'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
log = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-std = { workspace = true }

sqnc-pallet-traits = { default-features = false, path = '../traits' }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'sqnc-pallet-traits/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ["frame-support/try-runtime"]
