[package]
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
description = 'A FRAME pallet for handling a shared IPFS swarm key'
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
name = 'pallet-symmetric-key'
version = "2.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
frame-support-test = { workspace = true }
pallet-scheduler = { workspace = true }
sp-core = { workspace = true }


[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
]
runtime-benchmarks = ['frame-benchmarking']
try-runtime = ["frame-support/try-runtime"]
