[package]
name = "dscp-pallet-traits"
version = "3.2.4"
edition = "2021"
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
description = "Common pallet traits for the dscp-node"

[dependencies]
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }

[features]
default = ['std']
std = ['sp-std/std', 'frame-support/std']
