[package]
name = "dscp-pallet-traits"
version = "3.2.4"
edition = "2021"
authors = ['Digital Catapult <https://www.digicatapult.org.uk>']
license = 'Apache-2.0'
repository = 'https://github.com/digicatapult/dscp-node/'
description = "Common pallet traits for the dscp-node"

[dependencies]
scale-info = { workspace = true, features = ["derive", "serde"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true, features = ["serde"] }
sp-std = { workspace = true }
frame-support = { workspace = true }

[features]
default = ['std']
std = ['sp-runtime/std', 'sp-std/std', 'frame-support/std']
